Marked uint256_t's operator uint64_t const, using mode(OI) if it's available

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,15 @@ if( MODE_TI )
   endif()
 endif()
 
+try_compile(MODE_OI "${PROJECT_BINARY_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules/check_mode_oi.cpp")
+if( MODE_OI )
+  if(MSVC)
+    add_definitions("/DMODE_OI")
+  else()
+    add_definitions("-DMODE_OI")
+  endif()
+endif()
+
 include(CheckSSE4_2)
 if( BUILTIN_POPCNT )
     if( CMAKE_COMPILER_IS_GNUCXX )
