Added a check for __attribute__ ((hot))

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,15 @@ if( MODE_OI )
   endif()
 endif()
 
+try_compile(ATTRIBUTE_HOT "${PROJECT_BINARY_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules/check_attribute_hot.cpp")
+if( ATTRIBUTE_HOT )
+  if(MSVC)
+    add_definitions("/DHAVE_ATTRIBUTE_HOT")
+  else()
+    add_definitions("-DHAVE_ATTRIBUTE_HOT")
+  endif()
+endif()
+
 include(CheckSSE4_2)
 if( BUILTIN_POPCNT )
     if( CMAKE_COMPILER_IS_GNUCXX )
