Added an optimized build type that includes assertions, works with Clang and GCC for now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,8 @@ set(PROJECT_VENDOR "Simon Gog")
 set(PROJECT_CONTACT "simon.gog@gmail.com")
 set(PROJECT_URL "https://github.com/simongog/sdsl-lite")
 set(PROJECT_DESCRIPTION "SDSL: Succinct Data Structure Library")
-set(CMAKE_BUILD_TYPE "Release")
+set(CMAKE_C_FLAGS_RELWITHDEBANDASSERT "-g -march=native -O2 -ftree-vectorize -foptimize-sibling-calls -ffast-math -funroll-loops")
+set(CMAKE_CXX_FLAGS_RELWITHDEBANDASSERT "-g -march=native -O2 -ftree-vectorize -foptimize-sibling-calls -ffast-math -funroll-loops")
 
 file(READ "${CMAKE_CURRENT_SOURCE_DIR}/VERSION" PROJECT_VERSION_FULL)
 string(REGEX REPLACE "[\n\r]" "" PROJECT_VERSION_FULL "${PROJECT_VERSION_FULL}")
@@ -41,17 +42,17 @@ else()
 endif()
 
 if( CMAKE_COMPILER_IS_GNUCXX )
-    append_cxx_compiler_flags("-std=c++11 -Wall -Wextra  -DNDEBUG" "GCC" CMAKE_CXX_FLAGS)
-    append_cxx_compiler_flags("-O3 -ffast-math -funroll-loops" "GCC" CMAKE_CXX_OPT_FLAGS)
+    append_cxx_compiler_flags("-std=c++11 -Wall -Wextra" "GCC" CMAKE_CXX_FLAGS)
+    #append_cxx_compiler_flags("-O3 -ffast-math -funroll-loops" "GCC" CMAKE_CXX_OPT_FLAGS)
     if ( CODE_COVERAGE )
         append_cxx_compiler_flags("-g -fprofile-arcs -ftest-coverage -lgcov" "GCC" CMAKE_CXX_FLAGS)
     endif()
       
 else()
     if( CMAKE_COMPILER_IS_CLANGXX )
-		append_cxx_compiler_flags("-std=c++11 -DNDEBUG" "CLANG" CMAKE_CXX_FLAGS)
+		append_cxx_compiler_flags("-std=c++11" "CLANG" CMAKE_CXX_FLAGS)
 		append_cxx_compiler_flags("-stdlib=libc++" "CLANG" CMAKE_CXX_FLAGS)
-		append_cxx_compiler_flags("-O3 -ffast-math -funroll-loops -D__extern_always_inline=\"extern __always_inline\" " "CLANG" CMAKE_CXX_OPT_FLAGS)
+		append_cxx_compiler_flags("-D__extern_always_inline=\"extern __always_inline\" " "CLANG" CMAKE_CXX_OPT_FLAGS)
 	else()
 		append_cxx_compiler_flags("/EHsc" "MSVC" CMAKE_CXX_FLAGS)
 		append_cxx_compiler_flags("/Od" "MSVC" CMAKE_CXX_FLAGS_DEBUG)
