--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,6 +93,24 @@ if( ATTRIBUTE_HOT )
   endif()
 endif()
 
+try_compile(ATTRIBUTE_PURE "${PROJECT_BINARY_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules/check_attribute_pure.cpp")
+if( ATTRIBUTE_PURE )
+  if(MSVC)
+    add_definitions("/DHAVE_ATTRIBUTE_PURE")
+  else()
+    add_definitions("-DHAVE_ATTRIBUTE_PURE")
+  endif()
+endif()
+
+try_compile(ATTRIBUTE_CONST "${PROJECT_BINARY_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules/check_attribute_const.cpp")
+if( ATTRIBUTE_CONST )
+  if(MSVC)
+    add_definitions("/DHAVE_ATTRIBUTE_CONST")
+  else()
+    add_definitions("-DHAVE_ATTRIBUTE_CONST")
+  endif()
+endif()
+
 include(CheckSSE4_2)
 if( BUILTIN_POPCNT )
     if( CMAKE_COMPILER_IS_GNUCXX )
